some minor changes

--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
                                     <li>Now</li>
                                     <li>$99/Lifetime</li>
                                 </ul>
+
                             </div>
+                            <a href="#">Buy Now</a>
                         </div>
                     </div>
                 </div>
